square on small screens with slight breakpoint and overflow update - fixes #1

--- a/source/stylus/clock/clocks.styl
+++ b/source/stylus/clock/clocks.styl
@@ -1,9 +1,14 @@
 .clocks
+  background white
+  border-bottom 1px solid #ddd
+  border-top 1px solid #ddd
+  overflow hidden
   max-width CLOCKS_MAX_WIDTH
 
-  @media BREAKPOINT
-    background white
+  @media BREAKPOINT_1
     border 1px solid #ddd
+  
+  @media BREAKPOINT_2
     margin CLOCKS_MARGIN
 
 .clocks__frame
