--- a/source/stylus/clock/html.styl
+++ b/source/stylus/clock/html.styl
@@ -1,13 +1,10 @@
 html
 body
-  background white
+  background #f7f7f7
   margin 0
   padding 0
   -webkit-tap-highlight-color transparent
   text-size-adjust none
-
-  @media BREAKPOINT
-    background #f7f7f7
 
 body
   align-items center
